kube/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ssa
  annotations:
    kompose.cmd: C:\Apps\kompose.exe convert -f .\docker-compose.yml
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Apps\kompose.exe convert -f .\docker-compose.yml
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/ep3-bs-docker-default: "true"
        io.kompose.service: app
    spec:
      containers:
        - image: carlscotneyun/ep3-bs-docker-app:latest
          resources:
            limits:
              memory: "256Mi"
          name: app
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /var/www/html
              name: app
      restartPolicy: Always
      volumes:
        - name: app
          persistentVolumeClaim:
            claimName: app
