kube/smtp4dev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Apps\kompose.exe convert -f .\docker-compose.yml
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: smtp4dev
  name: smtp4dev
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: smtp4dev
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Apps\kompose.exe convert -f .\docker-compose.yml
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/ep3-bs-docker-default: "true"
        io.kompose.service: smtp4dev
    spec:
      containers:
        - env:
            - name: ServerOptions__HostName
              value: smtp4dev
          image: rnwood/smtp4dev:v3
          name: smtp4dev
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 25
              protocol: TCP
            - containerPort: 143
              protocol: TCP
          volumeMounts:
            - mountPath: /smtp4dev
              name: smtp4dev-data
      restartPolicy: Always
      volumes:
        - name: smtp4dev-data
          persistentVolumeClaim:
            claimName: smtp4dev-data
