kube/app-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    io.kompose.service: app
  ports:
    - port: 80
      name: http
      targetPort: 80
