kube/smtp4dev-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Apps\kompose.exe convert -f .\docker-compose.yml
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: smtp4dev
  name: smtp4dev
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: "25"
      port: 25
      targetPort: 25
    - name: "143"
      port: 143
      targetPort: 143
  selector:
    io.kompose.service: smtp4dev
